@@ -66,6 +66,7 @@
     * 0387 FIX: df*: Negative filesystem space levels get a more clear text in check output...
     * 0351 FIX: local: Catch invalid state codes and map to 3 (UNKNOWN)...
     * 0397 FIX: mrpe: tolerate performance variable names with spaces...
+    * 0399 FIX: check_ftp: cleanup configuration via WATO, remove Hostname field...
 
     Multisite:
     * 0371 Added log class filter to hostsvcevents view
